--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,15 @@
     <button (click)="changeText()">テキスト変更</button>
     <button (click)="changeColor()">色変更</button>
   </div>
+      [shouldDisplay]="shouldDisplay"
+      (iconClickEvent)="handleIconClickEvent()"
 
   <app-svg
     [text]="text"
     [left]="left"
     [right]="right"
+    [shouldDisplay]="shouldDisplay2"
+    (iconClickEvent)="handleIconClickEvent2()"
   ></app-svg>
   <div>
     <app-svg2></app-svg2>
