--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,16 @@
     <button (click)="changeText()">テキスト変更</button>
     <button (click)="changeColor()">色変更</button>
   </div>
+      [text]="text"
+      [left]="left"
+      [right]="right"
       [shouldDisplay]="shouldDisplay"
       (iconClickEvent)="handleIconClickEvent()"
 
   <app-svg
     [text]="text"
-    [left]="left"
-    [right]="right"
+    [left]="right"
+    [right]="left"
     [shouldDisplay]="shouldDisplay2"
     (iconClickEvent)="handleIconClickEvent2()"
   ></app-svg>
